rating-start-UI

--- a/src/main/resources/templates/client/fragments/head.html
+++ b/src/main/resources/templates/client/fragments/head.html
@@ -28,6 +28,8 @@
     <!-- Template Stylesheet -->
     <link href="/client/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="/client/css/custom.css">
+    <link rel="stylesheet" href="/client/css/rate-start.css" />
+
 </head>
 
 <body>
