--- a/src/main/resources/templates/admin/coupon/couponList.html
+++ b/src/main/resources/templates/admin/coupon/couponList.html
@@ -162,32 +162,36 @@
                                                             </button>
                                                         </form>
                                                         <!--Hidden form for delete coupon-->
-                                                        <form th:action="@{'/admin/coupon/delete/' + ${coupon.id}}" method="post" id="deleteCouponForm"></form>
-                                                        <button type="submit" class="btn btn-outline-danger btn-sm" onclick="confirmDelete()">
+                                                        <form th:action="@{'/admin/coupon/delete/' + ${coupon.id}}" method="post" id="deleteCouponForm">
+                                                        </form>
+                                                        <button type="submit" class="btn btn-outline-danger btn-sm" onclick="confirmDelete(${coupon.id})">
                                                             <i class="bx bx-trash me-1"></i>
                                                         </button>
+
+                                                        <!-- Delete Confirmation Modal -->
+                                                        <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
+                                                            <div class="modal-dialog">
+                                                                <div class="modal-content">
+                                                                    <div class="modal-header">
+                                                                        <h5 class="modal-title" id="deleteConfirmationModalLabel">Confirm Delete</h5>
+                                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                                    </div>
+                                                                    <div class="modal-body">
+                                                                        Are you sure you want to delete this information? This can not be undone!
+                                                                    </div>
+                                                                    <div class="modal-footer">
+                                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                                                        <button type="submit" class="btn btn-danger" onclick="submitDeleteForm()">Delete</button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
                                                     </div>
                                                 </td>
                                             </tr>
 
-                                            <!-- Delete Confirmation Modal -->
-                                            <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
-                                                <div class="modal-dialog">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <h5 class="modal-title" id="deleteConfirmationModalLabel">Confirm Delete</h5>
-                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            Are you sure you want to delete this information? This can not be undone!
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                                            <button type="submit" class="btn btn-danger" onclick="submitDeleteForm()">Delete</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
+
                                             </tbody>
                                         </table>
                                     </div>
@@ -212,7 +216,7 @@
 </body>
 
 <script>
-    function confirmDelete() {
+    function confirmDelete(id) {
         $('#deleteConfirmationModal').modal('show');
     }
 
