--- a/src/main/resources/templates/admin/restaurant/restaurantList.html
+++ b/src/main/resources/templates/admin/restaurant/restaurantList.html
@@ -30,68 +30,67 @@
 <div class="layout-wrapper layout-content-navbar">
     <div class="layout-container">
         <!-- Menu -->
-
         <aside id="layout-menu"
-               th:replace="~{admin/fragments/menu :: drawer-menu(value_menu = 'restaurants,restaurants_list')}"
-               class="layout-menu menu-vertical menu bg-menu-theme"></aside>
+               th:replace="~{admin/fragments/menu :: drawer-menu(value_menu = 'restaurants,restaurants_list')}"></aside>
         <!-- / Menu -->
 
         <!-- Layout container -->
         <div class="layout-page">
             <!-- Navbar -->
-
             <nav th:replace="~{admin/fragments/nav :: nav-bar(value_title = 'Restaurant')}"></nav>
-
             <!-- / Navbar -->
 
             <!-- Content wrapper -->
             <div class="content-wrapper">
                 <!-- Content -->
-
-                    <!-- Basic Bootstrap Table -->
-                    <div class="card">
-                        <h5 class="card-header">Restaurants</h5>
-                        <div class="table-responsive text-nowrap">
-                            <table class="table">
-                                <thead>
-                                <tr>
-                                    <th>Restaurant Name</th>
-                                    <th>Slug</th>
-                                    <th>Description</th>
-                                    <th>Address</th>
-                                    <th>Open time</th>
-                                    <th>Close time</th>
-                                    <th>Actions</th>
-                                </tr>
-                                </thead>
-                                <tbody class="table-border-bottom-0">
-                                <tr th:each="restaurant : ${res}">
-                                    <td>
-                                        <th:block th:if="${restaurant.image != null}">
-                                            <img th:src="@{'/' + ${restaurant.image}}"
-                                                 th:alt-title="${restaurant.restaurantName}" class="rounded-circle"
-                                                 width="30" height="30"/>
-                                        </th:block>
-                                        <span th:text="${restaurant.restaurantName}"></span>
-                                    </td>
-                                    <td th:text="${restaurant.slug}"><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong></strong></td>
-                                    <td th:text="${restaurant.description}"></td>
-                                    <td th:text="${restaurant.address}"></td>
-                                    <td th:text="${restaurant.openTime}"></td>
-                                    <td th:text="${restaurant.closeTime}"></td>
-                                    <td>
-                                        <a class="btn btn-sm btn-primary"
-                                           th:href="@{/admin/restaurant/update/{id}(id=${restaurant.id})}"
-                                        >
-                                            <i class="bx bx-edit-alt me-1"></i> Edit
-                                        </a>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
+                <div class="container-xxl flex-grow-1 container-p-y">
+                    <h4 class="fw-bold p-3 mb-4"><span class="text-muted fw-light"></span>Create New</h4>
+                    <div class="row">
+                        <!-- Basic Bootstrap Table -->
+                        <div class="card">
+                            <h5 class="card-header">Restaurants</h5>
+                            <div class="table-responsive text-nowrap">
+                                <table class="table">
+                                    <thead>
+                                    <tr>
+                                        <th>Restaurant Name</th>
+                                        <th>Slug</th>
+                                        <th>Description</th>
+                                        <th>Address</th>
+                                        <th>Open time</th>
+                                        <th>Close time</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody class="table-border-bottom-0">
+                                    <tr th:each="restaurant : ${res}">
+                                        <td>
+                                            <th:block th:if="${restaurant.image != null}">
+                                                <img th:src="@{'/' + ${restaurant.image}}"
+                                                     th:alt-title="${restaurant.restaurantName}" class="rounded-circle"
+                                                     width="30" height="30"/>
+                                            </th:block>
+                                            <span th:text="${restaurant.restaurantName}"></span>
+                                        </td>
+                                        <td th:text="${restaurant.slug}"><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong></strong></td>
+                                        <td th:text="${restaurant.description}"></td>
+                                        <td th:text="${restaurant.address}"></td>
+                                        <td th:text="${restaurant.openTime}"></td>
+                                        <td th:text="${restaurant.closeTime}"></td>
+                                        <td>
+                                            <a class="btn btn-sm btn-primary"
+                                               th:href="@{/admin/restaurant/update/{id}(id=${restaurant.id})}"
+                                            >
+                                                <i class="bx bx-edit-alt me-1"></i> Edit
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
+                        <!--/ Basic Bootstrap Table -->
                     </div>
-                    <!--/ Basic Bootstrap Table -->
                 </div>
                 <!-- / Content -->
 
